--- a/src/ExtensionGallery/wwwroot/web2.config
+++ b/src/ExtensionGallery/wwwroot/web2.config
@@ -1,5 +1,15 @@
 ﻿<?xml version="1.0"?>
 <configuration>
+
+    <appSettings>
+        <add key="kpm-package-path" value="..\approot\packages" />
+        <add key="bootstrapper-version" value="1.0.0-beta2" />
+        <add key="kre-package-path" value="..\approot\packages" />
+        <add key="kre-version" value="1.0.0-beta2" />
+        <add key="kre-clr" value="CoreCLR" />
+        <add key="kre-app-base" value="..\approot\src\ExtensionGallery" />
+    </appSettings>
+
     <system.web>
         <customErrors mode="Off" />
     </system.web>
