--- a/src/ExtensionGallery/wwwroot/web2.config
+++ b/src/ExtensionGallery/wwwroot/web2.config
@@ -13,6 +13,7 @@
     <system.web>
         <customErrors mode="Off" />
     </system.web>
+
     <system.webServer>
 
         <urlCompression doDynamicCompression="true" doStaticCompression="true"/>
@@ -21,6 +22,9 @@
 
             <remove fileExtension=".js"/>
             <mimeMap fileExtension=".js" mimeType="text/javascript" />
+
+            <remove fileExtension=".vsix"/>
+            <mimeMap fileExtension=".vsix" mimeType="application/octed-stream" />
         </staticContent>
 
         <rewrite>
