--- a/src/ExtensionGallery/project.json
+++ b/src/ExtensionGallery/project.json
@@ -3,21 +3,21 @@
 	"webroot": "wwwroot",
 	"version": "1.0.0-*",
 	"dependencies": {
-		"EntityFramework.SqlServer": "7.0.0-beta2",
-		"EntityFramework.Commands": "7.0.0-beta2",
+//		"EntityFramework.SqlServer": "7.0.0-beta2",
+//		"EntityFramework.Commands": "7.0.0-beta2",
 		"Microsoft.AspNet.Mvc": "6.0.0-beta2",
 		//"Microsoft.AspNet.Mvc.WebApiCompatShim": "6.0.0-beta1",
 		"Microsoft.AspNet.Diagnostics": "1.0.0-beta2",
-		"Microsoft.AspNet.Diagnostics.Entity": "7.0.0-beta2",
-		"Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta2",
+//		"Microsoft.AspNet.Diagnostics.Entity": "7.0.0-beta2",
+//		"Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta2",
 		"Microsoft.AspNet.Security.Cookies": "1.0.0-beta2",
 		"Microsoft.AspNet.Server.IIS": "1.0.0-beta2",
 		"Microsoft.AspNet.Server.WebListener": "1.0.0-beta2",
 		"Microsoft.AspNet.StaticFiles": "1.0.0-beta2",
 		"Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta2",
 		"Microsoft.Framework.CodeGenerators.Mvc": "1.0.0-beta2",
-		"Microsoft.Framework.Logging": "1.0.0-beta2",
-		"Microsoft.Framework.Logging.Console": "1.0.0-beta2",
+//		"Microsoft.Framework.Logging": "1.0.0-beta2",
+//		"Microsoft.Framework.Logging.Console": "1.0.0-beta2",
 		"Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta1",
 		"Newtonsoft.Json": "6.0.7"
 	},
@@ -47,8 +47,7 @@
 		"node_modules",
 		"bower_components",
 		"app",
-		".tmp",
-		"Views"
+		".tmp"
 	],
 	"packExclude": [
 		"node_modules",
@@ -60,8 +59,7 @@
 		"**.kproj",
 		"**.user",
 		"**.vspscc",
-		"**._references.js",
-		"Views"
+		"*._references.js"
 	],
 	"scripts": {
 		"postrestore": [ "npm install" ],
