--- a/src/ExtensionGallery/project.json
+++ b/src/ExtensionGallery/project.json
@@ -16,9 +16,9 @@
 		"Microsoft.AspNet.StaticFiles": "1.0.0-beta2",
 		"Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta2",
 		"Microsoft.Framework.CodeGenerators.Mvc": "1.0.0-beta2",
-//		"Microsoft.Framework.Logging": "1.0.0-beta2",
-//		"Microsoft.Framework.Logging.Console": "1.0.0-beta2",
-		"Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta1",
+		"Microsoft.Framework.Logging": "1.0.0-beta2",
+		"Microsoft.Framework.Logging.Console": "1.0.0-beta2",
+		//"Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta1",
 		"Newtonsoft.Json": "6.0.7"
 	},
 	"commands": {
