VSIX file name rewrite. Fixed #1

--- a/src/ExtensionGallery/wwwroot/web.config
+++ b/src/ExtensionGallery/wwwroot/web.config
@@ -34,6 +34,10 @@
           <match url="^(extension/|upload|author)"/>
           <action type="Rewrite" url="index.html"/>
         </rule>
+        <rule name="VSIX paths">
+          <match url="^(.+)/(.+\.vsix)$"/>
+          <action type="Rewrite" url="{R:1}/extension.vsix"/>
+        </rule>
       </rules>
     </rewrite>
   </system.webServer>
