Implemented Live Tile support. Fixed #3

--- a/src/ExtensionGallery/project.json
+++ b/src/ExtensionGallery/project.json
@@ -62,6 +62,7 @@
 		"**._references.js"
 	],
 	"scripts": {
-		"postrestore": [ "npm install" ]
+		"postrestore": [ "npm install" ],
+		"prepack": ["grunt build"]
 	}
 }
