Added feed guide

--- a/src/ExtensionGallery/wwwroot/web.config
+++ b/src/ExtensionGallery/wwwroot/web.config
@@ -31,7 +31,7 @@
     <rewrite>
       <rules>
         <rule name="index.html">
-          <match url="^(extension/|upload|author)"/>
+          <match url="^(extension/|upload|author|guide/)"/>
           <action type="Rewrite" url="index.html"/>
         </rule>
         <rule name="VSIX paths">
