--- a/src/ExtensionGallery/project.json
+++ b/src/ExtensionGallery/project.json
@@ -1,68 +1,68 @@
 ﻿{
-	/* Click to learn more about project.json  http://go.microsoft.com/fwlink/?LinkID=517074 */
-	"webroot": "wwwroot",
-	"version": "1.0.0-*",
-	"dependencies": {
-//		"EntityFramework.SqlServer": "7.0.0-beta2",
-//		"EntityFramework.Commands": "7.0.0-beta2",
-		"Microsoft.AspNet.Mvc": "6.0.0-beta2",
-		//"Microsoft.AspNet.Mvc.WebApiCompatShim": "6.0.0-beta1",
-		"Microsoft.AspNet.Diagnostics": "1.0.0-beta2",
-//		"Microsoft.AspNet.Diagnostics.Entity": "7.0.0-beta2",
-//		"Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta2",
-		"Microsoft.AspNet.Security.Cookies": "1.0.0-beta2",
-		"Microsoft.AspNet.Server.IIS": "1.0.0-beta2",
-		"Microsoft.AspNet.Server.WebListener": "1.0.0-beta2",
-		"Microsoft.AspNet.StaticFiles": "1.0.0-beta2",
-		"Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta2",
-		"Microsoft.Framework.CodeGenerators.Mvc": "1.0.0-beta2",
-		"Microsoft.Framework.Logging": "1.0.0-beta2",
-		"Microsoft.Framework.Logging.Console": "1.0.0-beta2",
-		//"Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta1",
-		"Newtonsoft.Json": "6.0.7"
-	},
-	"commands": {
-		/* Change the port number when you are self hosting this application */
-		"web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000",
-		"gen": "Microsoft.Framework.CodeGeneration",
-		"ef": "EntityFramework.Commands"
-	},
-	"frameworks": {
-//		"aspnet50": {
-//			"frameworkAssemblies": {
-//				"System.Net.Http": "4.0.0.0",
-//				"System.Xml": "4.0.0.0"
-//			}
-//		},
-		"aspnetcore50": {
-			"dependencies": {
-				"System.Net.Http": "4.0.0.0",
-				"System.Xml.XmlDocument": "4.0.0.0",
-				"System.IO.Compression.ZipFile": "4.0.0.0"
-			}
-		}
-	},
-	"exclude": [
-		"wwwroot",
-		"node_modules",
-		"bower_components",
-		"app",
-		".tmp"
-	],
-	"packExclude": [
-		"node_modules",
-		"bower_components",
-		"app",
-		"wwwroot/extensions",
-		"wwwroot/temp",
-		".tmp",
-		"**.kproj",
-		"**.user",
-		"**.vspscc",
-		"**._references.js"
-	],
-	"scripts": {
-		"postrestore": [ "npm install" ],
-		"prepack": ["grunt build"]
-	}
+    /* Click to learn more about project.json  http://go.microsoft.com/fwlink/?LinkID=517074 */
+    "webroot": "wwwroot",
+    "version": "1.0.0-*",
+    "dependencies": {
+        //		"EntityFramework.SqlServer": "7.0.0-beta2",
+        //		"EntityFramework.Commands": "7.0.0-beta2",
+        "Microsoft.AspNet.Mvc": "6.0.0-beta4",
+        //"Microsoft.AspNet.Mvc.WebApiCompatShim": "6.0.0-beta1",
+        "Microsoft.AspNet.Diagnostics": "1.0.0-beta4",
+        //		"Microsoft.AspNet.Diagnostics.Entity": "7.0.0-beta2",
+        //		"Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta2",
+        "Microsoft.AspNet.Security.Cookies": "1.0.0-beta3",
+        "Microsoft.AspNet.Server.IIS": "1.0.0-beta4",
+        "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
+        "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
+        "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4",
+        "Microsoft.Framework.CodeGenerators.Mvc": "1.0.0-beta4",
+        "Microsoft.Framework.Logging": "1.0.0-beta4",
+        "Microsoft.Framework.Logging.Console": "1.0.0-beta4",
+        //"Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta1",
+        "Newtonsoft.Json": "6.0.7"
+    },
+    "commands": {
+        /* Change the port number when you are self hosting this application */
+        "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000",
+        "gen": "Microsoft.Framework.CodeGeneration",
+        "ef": "EntityFramework.Commands"
+    },
+    "frameworks": {
+        //		"dnx451": {
+        //			"frameworkAssemblies": {
+        //				"System.Net.Http": "4.0.0.0",
+        //				"System.Xml": "4.0.0.0"
+        //			}
+        //		},
+        "dnxcore50": {
+            "dependencies": {
+                "System.Net.Http": "4.0.0-beta-22816",
+                "System.Xml.XmlDocument": "4.0.0-beta-22816",
+                "System.IO.Compression.ZipFile": "4.0.0-beta-22816"
+            }
+        }
+    },
+    "exclude": [
+        "wwwroot",
+        "node_modules",
+        "bower_components",
+        "app",
+        ".tmp"
+    ],
+    "publishExclude": [
+        "node_modules",
+        "bower_components",
+        "app",
+        "wwwroot/extensions",
+        "wwwroot/temp",
+        ".tmp",
+        "**.kproj",
+        "**.user",
+        "**.vspscc",
+        "**._references.js"
+    ],
+    "scripts": {
+        "postrestore": [ "npm install" ],
+        "prepack": [ "grunt build" ]
+    }
 }
