--- a/src/ExtensionGallery/project.json
+++ b/src/ExtensionGallery/project.json
@@ -19,7 +19,7 @@
         "Microsoft.Framework.Logging": "1.0.0-beta4",
         "Microsoft.Framework.Logging.Console": "1.0.0-beta4",
         //"Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta1",
-        "Newtonsoft.Json": "6.0.7"
+        "Newtonsoft.Json": "6.0.8"
     },
     "commands": {
         /* Change the port number when you are self hosting this application */
@@ -62,7 +62,7 @@
         "**._references.js"
     ],
     "scripts": {
-        "postrestore": [ "npm install" ],
+        "postrestore": [ "npm install", "bower install", "grunt" ],
         "prepack": [ "grunt build" ]
     }
 }
