--- a/src/ExtensionGallery/project.json
+++ b/src/ExtensionGallery/project.json
@@ -1,47 +1,33 @@
 ﻿{
-    /* Click to learn more about project.json  http://go.microsoft.com/fwlink/?LinkID=517074 */
-    "webroot": "wwwroot",
-    "version": "1.0.0-*",
-    "dependencies": {
-        //		"EntityFramework.SqlServer": "7.0.0-beta2",
-        //		"EntityFramework.Commands": "7.0.0-beta2",
-        "Microsoft.AspNet.Mvc": "6.0.0-beta4",
-        //"Microsoft.AspNet.Mvc.WebApiCompatShim": "6.0.0-beta1",
-        "Microsoft.AspNet.Diagnostics": "1.0.0-beta4",
-        //		"Microsoft.AspNet.Diagnostics.Entity": "7.0.0-beta2",
-        //		"Microsoft.AspNet.Identity.EntityFramework": "3.0.0-beta2",
-        "Microsoft.AspNet.Security.Cookies": "1.0.0-beta3",
-        "Microsoft.AspNet.Server.IIS": "1.0.0-beta4",
-        "Microsoft.AspNet.Server.WebListener": "1.0.0-beta4",
-        "Microsoft.AspNet.StaticFiles": "1.0.0-beta4",
-        "Microsoft.Framework.ConfigurationModel.Json": "1.0.0-beta4",
-        "Microsoft.Framework.CodeGenerators.Mvc": "1.0.0-beta4",
-        "Microsoft.Framework.Logging": "1.0.0-beta4",
-        "Microsoft.Framework.Logging.Console": "1.0.0-beta4",
-        //"Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0-beta1",
-        "Newtonsoft.Json": "6.0.8"
-    },
-    "commands": {
-        /* Change the port number when you are self hosting this application */
-        "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000",
-        "gen": "Microsoft.Framework.CodeGeneration",
-        "ef": "EntityFramework.Commands"
-    },
-    "frameworks": {
-        //		"dnx451": {
-        //			"frameworkAssemblies": {
-        //				"System.Net.Http": "4.0.0.0",
-        //				"System.Xml": "4.0.0.0"
-        //			}
-        //		},
-        "dnxcore50": {
-            "dependencies": {
-                "System.Net.Http": "4.0.0-beta-22816",
-                "System.Xml.XmlDocument": "4.0.0-beta-22816",
-                "System.IO.Compression.ZipFile": "4.0.0-beta-22816"
-            }
-        }
-    },
+  "webroot": "wwwroot",
+  "version": "1.0.0-*",
+  "dependencies": {
+    "Microsoft.AspNet.Mvc": "6.0.0-beta5",
+    "Microsoft.AspNet.Diagnostics": "1.0.0-beta5",
+    "Microsoft.AspNet.Authentication.Cookies": "1.0.0-beta5",
+    "Microsoft.AspNet.Server.IIS": "1.0.0-beta5",
+    "Microsoft.AspNet.Server.WebListener": "1.0.0-beta5",
+    "Microsoft.AspNet.StaticFiles": "1.0.0-beta5",
+    "Microsoft.Framework.Configuration.Json": "1.0.0-beta5",
+    "Microsoft.Framework.CodeGenerators.Mvc": "1.0.0-beta5",
+    "Microsoft.Framework.Logging": "1.0.0-beta5",
+    "Microsoft.Framework.Logging.Console": "1.0.0-beta5",
+    "Newtonsoft.Json": "6.0.8"
+  },
+  "commands": {
+    "web": "Microsoft.AspNet.Hosting --server Microsoft.AspNet.Server.WebListener --server.urls http://localhost:5000",
+    "gen": "Microsoft.Framework.CodeGeneration",
+    "ef": "EntityFramework.Commands"
+  },
+  "frameworks": {
+    "dnxcore50": {
+      "dependencies": {
+        "System.Net.Http": "4.0.0-beta-22816",
+        "System.Xml.XmlDocument": "4.0.0-beta-22816",
+        "System.IO.Compression.ZipFile": "4.0.0-beta-22816"
+      }
+    }
+  },
     "exclude": [
         "wwwroot",
         "node_modules",
