--- a/src/ExtensionGallery/bower.json
+++ b/src/ExtensionGallery/bower.json
@@ -4,13 +4,14 @@
   "dependencies": {
     "bootstrap": "3.0.0",
     "angular": "1.3.8",
-    "angular-route": "1.3.8"
+    "angular-route": "1.3.8",
+    "moment": "2.10.6"
   },
   "exportsOverride": {
-	"angular": {
-		"": "angular.{js,min.js,min.map}"
-	},
-	"angular-route": {
+    "angular": {
+      "": "angular.{js,min.js,min.map}"
+    },
+    "angular-route": {
       "": "angular-route.{js,min.js,*.map}"
     },
     "bootstrap": {
@@ -26,6 +27,9 @@
     },
     "jquery-validation-unobtrusive": {
       "": "jquery.validate.unobtrusive.{js,min.js}"
+    },
+    "moment": {
+      "": "min/moment.min.js"
     }
   }
 }
